
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whl-deploy"
version = "0.0.4"
description = "A deployment tool for WheelOS."
readme = "README.md"
authors = [
  { name = "daohu527", email = "daohu527@gmail.com" }
]
urls = { Homepage = "https://github.com/wheelos-tools/whl-deploy", "Bug Tracker" = "https://github.com/wheelos-tools/whl-deploy/issues" }
classifiers = [
  "Development Status :: 3 - Alpha", # Project's development stage
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only", # Python 3 only
  "License :: OSI Approved :: MIT License", # Specify license type
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools", # More specific category
  "Topic :: Utilities"
]

# Python version requirements.
requires-python = ">=3.8"

# Runtime dependencies
dependencies = [
  "requests",
  "pyyaml",
  "tqdm"
]

# Keywords for PyPI search.
keywords = ["whl-deploy", "wheelos", "cli-tool"]

[project.scripts]
# Command-line entry points.
whl-deploy = "whl_deploy.cli:main"

[tool.setuptools]
include-package-data = true
package-dir = { "" = "." } # Root directory for Python packages

[tool.setuptools.packages.find]
# Automatically discover Python packages.
where = ["."]
# exclude = ["tests*", "docs*"]
