[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whl-deploy"
version = "0.0.6"
description = "A deployment tool for WheelOS."
readme = "README.md"
authors = [
  { name = "daohu527", email = "support@wheelos.cn" }
]
urls = { Homepage = "https://github.com/wheelos-tools/whl-deploy", "Bug Tracker" = "https://github.com/wheelos-tools/whl-deploy/issues" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Utilities"
]

# Python version requirements.
requires-python = ">=3.8"

# Runtime dependencies
dependencies = [
  "requests",
  "pyyaml"
]

# Keywords for PyPI search.
keywords = ["whl-deploy", "wheelos", "cli-tool"]

[project.scripts]
# Command-line entry points.
whl-deploy = "whl_deploy.cli:main"

[tool.setuptools]
include-package-data = true
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "docs*"]
